--- a/jmeter/Dockerfile
+++ b/jmeter/Dockerfile
@@ -1,10 +1,10 @@
-FROM golang:1.20.5 as builder
-COPY . /agent
-WORKDIR /agent
-RUN git clone https://github.com/GodQ/go-rest-agent.git \
-    && cd go-rest-agent \
-    && go build -o /agent/agent \
-    && ls /agent
+# FROM golang:1.20.5 as builder
+# COPY . /agent
+# WORKDIR /agent
+# RUN git clone https://github.com/GodQ/go-rest-agent.git \
+#     && cd go-rest-agent \
+#     && go build -o /agent/agent \
+#     && ls /agent
 
 
 
@@ -38,18 +38,15 @@ RUN curl -kv https://dlcdn.apache.org//jmeter/binaries/apache-jmeter-${JMETER_VE
     && mv /tmp/apache-jmeter-${JMETER_VERSION} /jmeter \
     && rm -f apache-jmeter-${JMETER_VERSION}.tgz
 
-# RUN wget https://github.com/GodQ/go-rest-agent/releases/download/1.0.1/go-rest-agent.tgz -O agent.tgz \
-#     && mkdir /tmp/agent/ && tar zxvf agent.tgz -C /tmp/agent \
-#     && cp /tmp/agent/dist/linux-amd64/agent /jmeter \
-#     && chmod +x agent
-
 EXPOSE 1099
 EXPOSE ${AGENT_PORT}
 
 WORKDIR /jmeter
 
+# COPY --from=builder /agent/agent /jmeter/
+RUN wget https://github.com/GodQ/go-rest-agent/releases/download/1.0.1/agent_linux_amd64 -O agent \
+    && chmod +x agent
 COPY start.sh .
-COPY --from=builder /agent/agent /jmeter/
 
 # Default command
 CMD ["bash", "start.sh"]
