--- a/jmeter/Dockerfile
+++ b/jmeter/Dockerfile
@@ -13,11 +13,14 @@ FROM openjdk:22-jdk-slim
 # https://jmeter.apache.org/usermanual/remote-test.html
 
 ENV JMETER_VERSION 5.6.2
-# need to overwrite
-ENV SOURCE_GIT_URL "https://gitlab.com/godq/jmeter_test.git" 
-# default jmx dir <git project>/jmeter, need to overwrite
-ENV PROJECT_DIR "jmeter"
-# default lib ext dir <git project>/lib, need to overwrite
+ENV JMETER_DIR "/jmeter"
+# need to overwrite if use git, example: https://gitlab.com/godq/jmeter_test.git
+ENV SOURCE_GIT_URL "" 
+# user should mount volumn to this folder if not use git
+ENV PROJECT_DIR "/project"
+# default jmx dir <jmeter project>/jmeter, need to overwrite
+ENV JMX_DIR "jmx"
+# default lib ext dir <jmeter project>/lib, need to overwrite
 ENV LIB_EXT_DIR "lib"
 # worker for worker node, master for master node
 ENV ROLE=worker
@@ -35,18 +38,18 @@ RUN apt-get update \
 
 RUN curl -kv https://dlcdn.apache.org//jmeter/binaries/apache-jmeter-${JMETER_VERSION}.tgz -O \
     && tar zxvf apache-jmeter-${JMETER_VERSION}.tgz -C /tmp \
-    && mv /tmp/apache-jmeter-${JMETER_VERSION} /jmeter \
+    && mv /tmp/apache-jmeter-${JMETER_VERSION} $JMETER_DIR \
     && rm -f apache-jmeter-${JMETER_VERSION}.tgz
 
 EXPOSE 1099
 EXPOSE ${AGENT_PORT}
 
-WORKDIR /jmeter
+WORKDIR ${PROJECT_DIR}
 
-# COPY --from=builder /agent/agent /jmeter/
-RUN wget https://github.com/GodQ/go-rest-agent/releases/download/1.0.1/agent_linux_amd64 -O agent \
-    && chmod +x agent
-COPY start.sh .
+# COPY --from=builder /agent/agent .
+RUN wget https://github.com/GodQ/go-rest-agent/releases/download/1.0.1/agent_linux_amd64 -O $JMETER_DIR/agent \
+    && chmod +x $JMETER_DIR/agent
+COPY start.sh $JMETER_DIR
 
 # Default command
-CMD ["bash", "start.sh"]
+CMD ["bash", "$JMETER_DIR/start.sh"]
