--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples/jmeter_example"]
 	path = examples/jmeter_example
-	url = https://github.com/GodQ/jmeter_test.git
+	url = https://gitlab.com/godq/jmeter_test.git
